--- a/Test/src/App.css
+++ b/Test/src/App.css
@@ -55,6 +55,8 @@
   flex-direction: row;
 }
 
+
+
 /* ............ HERO SECTION...................................................................... */
 
 .hero_section{
@@ -62,5 +64,62 @@
 }
 
 .hero{
-  margin-left: 10%;
+  margin-left: 11%;
+  padding-top: 5%;
+  padding-bottom: 10%;
+  border: 0.2rem solid white;
+  width: 20%;
+}
+
+.capital_text{
+  font-size: x-small;
+  color: white;
+}
+
+.big_text{
+  font-size: xx-large;
+  color: white;
+  font-weight: bolder;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.discover_container a{
+  font-size: x-small;
+  text-decoration: none;
+  color: white;
+  padding-bottom: 4em;
+  padding-left: 5em;
+}
+
+.discover_container{
+  background-color: blue;
+  /* width: 40%; 
+  margin-right: 50%; */
+  padding: 2em;
+}
+
+
+/* .............................Experience Section.................................................. */
+
+.experience p{
+  margin-bottom: 0px;
+}
+
+.experience{
+  color: white;
+  
+}
+
+.experience_heading{
+  font-size: xx-large;
+  margin-left: 41%;
+}
+
+.experience_text{
+  margin-left: 47%;
+  font-size:x-small;
+}
+
+.experience_section{
+  background-color: #0F0D1D;
 }
