--- a/Test/src/App.css
+++ b/Test/src/App.css
@@ -112,14 +112,85 @@
 
 .experience_heading{
   font-size: xx-large;
-  margin-left: 41%;
+  margin-left: 37%;
 }
 
 .experience_text{
-  margin-left: 47%;
+  margin-left: 43%;
   font-size:x-small;
 }
 
 .experience_section{
   background-color: #0F0D1D;
+}
+
+.bitbucket-icon{
+  color: #2684FF; 
+  font-size: 4em; 
+}
+
+.read_n_logo{
+  display: flex;
+  flex-direction: row;
+}
+
+a.read{
+  padding-top: 1em;
+  padding-right: 8em;
+  padding-left: 5em;
+  color: rgb(188, 183, 183);
+  font-size: x-small;
+  margin-bottom: 0%;
+  padding-top: 2em;
+  text-decoration: none;
+}
+
+
+
+p.wealth_mgt{
+  padding-left: 3em;
+  width: 10%;
+}
+
+p.wealth_mgt{
+  padding-bottom: 0%;
+  margin-bottom: 0px;
+  color: white;
+}
+
+.wealth{
+  display: flex;
+  flex-direction: row;
+  gap: 2em;
+  margin-top: 2em;
+  margin-left: 15%;
+
+}
+
+.card_{
+  background-color: black;
+  padding-top: 2em;
+  padding-right: 2em;
+}
+
+
+.horizontal-rule {
+  display: flex;
+  align-items: center;
+  margin-left: 14%;
+  margin-right: 12%;
+  margin-top: 7%;
+}
+
+.line {
+  flex: 1;
+  height: 1px;
+  border: none;
+  background-color: white;
+  margin: 0 10px; 
+}
+
+.text {
+  font-size: 16px; 
+  color: white; 
 }
