--- a/Test/src/App.css
+++ b/Test/src/App.css
@@ -195,6 +195,66 @@ p.wealth_mgt{
   color: white; 
 }
 
+.play > svg{
+  margin: 1.5rem;
+}
+
+
+.play{
+  background-color: #2684FF;
+  width: 7%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
