--- a/Test/src/App.css
+++ b/Test/src/App.css
@@ -43,9 +43,9 @@
 }
 
 
-.container{
+/* .container{
   height: 100%;
-}
+} */
 
 .help{
   display: flexbox;
@@ -93,9 +93,11 @@
 
 .discover_container{
   background-color: blue;
+  width: 60%;
+
   /* width: 40%; 
   margin-right: 50%; */
-  padding: 2em;
+  /* padding: 2em; */
 }
 
 
@@ -195,20 +197,181 @@ p.wealth_mgt{
   color: white; 
 }
 
+
+/* .....................Market-Page Section......................................... */
+
 .play > svg{
-  margin: 1.5rem;
+  margin: 1.8rem;
 }
 
 
 .play{
   background-color: #2684FF;
-  width: 7%;
+  width: 13%;
+}
+
+.market_container {
+  display: flex;
+}
+
+.market_col {
+  flex: 1;
 }
 
 
+.progress-bar {
+  width: 75%; 
+  height: 1em; 
+  border: none; 
+  border-radius: 7px; 
+}
+
+.progress-bar::-webkit-progress-bar {
+  background-color: #f0f0f0; 
+}
+
+.progress-bar::-webkit-progress-value {
+  background-color: #007bff;
+  border-radius: 7px;  
+}
+
+.consulting{
+  display: flex;
+  gap: 48%;
+}
+
+.consulting_container h6{
+  font-size: small;
+}
+
+.advices_container h6{
+  font-size: small;
+}
+
+.advices{
+  display: flex;
+  gap: 38%;
+}
+
+.phone_ring > svg{
+  margin-left: 1.5em;
+  margin-top: 0.5em;
+}
 
 
+.phone_ring{
+  background-color: #87b3ec;
+  width: 13%;
+}
 
+.call_us{
+  display: flex;
+  gap: 1em;
+}
+
+.call_details p{
+  margin: 0px;
+}
+
+.call_details{
+  margin-top: 1em;
+}
+
+.professional_container{
+  display: flex;
+  gap: 1.5em;
+}
+
+.one{
+  background-color: #87b3ec;
+  width: 15%;
+  height: 60%;
+  
+}
+
+.one > h6{
+  margin-left: 2em;
+  margin-top: 1em;
+}
+
+.professional {
+  display: flex;
+  margin-top: 5em;
+}
+
+.professional_container {
+  flex: 1;
+  margin: 3em;
+}
+
+.business_case{
+  background-color: #8F8DA0;
+  width: 20%;
+}
+
+p.leadership{
+  margin-bottom: 0.2em;
+  font-size:x-small;
+  width: 100%;
+  color: white;
+}
+
+p.business_growth{
+  width: 10%;
+  font-size: x-large;
+  color: white;
+}
+
+.business_case > svg{
+  padding-bottom: 3%;
+}
+
+.business_case{
+  padding-top: 10%;
+  padding-bottom: 2%;
+  padding-left: 3%;
+}
+
+.business_container{
+  display: flex;
+  gap: 2em;
+  margin-left: 3em;
+  margin-bottom: 3em;
+}
+
+.mission{
+  background-color: #3B365D;
+  margin-left:;
+}
+
+p.mission_statement{
+  width: 30%;
+  text-align: center;
+  font-size: xx-large;
+  font-weight: bold;
+  color: white;
+  margin-left: 38%;
+}
+
+
+a.discover_more{
+  text-decoration: none;
+  /* margin-left: 8em; */
+  color: white;
+  font-size: small;
+}
+
+.discover_more_container{
+  background-color: #2684FF;
+  width: 10.5%;
+  padding: 1rem;
+  margin-left: 48%;
+}
+
+.mission_card{
+  padding-top: 4em;
+  padding-bottom: 3em;
+}
 
 
 
