--- a/Test/src/App.css
+++ b/Test/src/App.css
@@ -513,7 +513,9 @@ p.item{
   padding-bottom: 4em;
   padding-top: 3em;
   display: flex;
-  gap: 1em;
+  gap: 1.5em;
+  padding-left: 8em;
+  padding-right: 10em;
 }
 
 .customer_tile{
@@ -526,12 +528,76 @@ p.item{
   flex: 1;
 }
 
+.talk_about{
+  font-size:xx-large;
+  font-weight:bolder;
+  font-family: 'Times New Roman', Times, serif;
+  width: 75%;
+}
 
+.arrow > svg {
+  background-color: white;
+  border-radius: 50%;
+}
 
+.arrow{
+  display: flex;
+  gap: 1em;
+}
 
+/* .....................Consulting Solutions......................... */
 
+.consult_container{
+  background-color: #07122D;
+  padding: 3em;
+  padding-bottom: 10em;
+}
 
+.consulting_tile{
+  display: flex;
+}
 
+.solution_card{
+  flex: 1;
+  color: white;
+  border-right: 0.1em solid gray;
+  margin-left: 5em;
+}
+
+.solution_card svg{
+  margin-left: 2em;
+}
+
+.four_twenty{
+  font-weight: bolder;
+  margin-left: 2.5em;
+}
+
+.consulting_solutions{
+  font-size:xx-small;
+}
+
+.business_growth{
+  display: flex;
+  margin-left: 17%;
+  margin-right: 17%;
+}
+
+.business_{
+  flex: 1;
+}
+
+p.business_text{
+  padding: 2em;
+  padding-left: 3em;
+  background-color: #F2F4F8;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+p.business_white{
+  background-color: white;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 1);
+}
 
 
 
