--- a/Test/src/App.css
+++ b/Test/src/App.css
@@ -599,14 +599,130 @@ p.business_white{
   box-shadow: 0 0 20px rgba(0, 0, 0, 1);
 }
 
+.check_circle {
+  background-color: #EBF1FF;
+  height: 20%;
+}
+
+.success_rate_tile{
+  display: flex;
+}
+
+.HSR_list {
+  list-style: none;
+  padding-top: 5em;
+}
+
+.HSR_list li::before {
+  content: "-"; 
+  color: blue; 
+  margin-right: 0.5em; 
+}
+
+.HSR_section{
+  display: flex;
+  font-size: smaller;
+  padding-top: 5em;
+  padding-left: 5em;
+  padding-bottom: 4em;
+}
+
+.HSR_card1{
+  flex: 1;
+}
+
+.HSR_card2{
+  flex: 1;
+  margin-left: 1em;
+}
+
+.HSR_card1{
+  border-right: 0.1em solid grey;
+}
+
+p.hsr1{
+  font-weight: bolder;
+}
+
+.highest_success{
+  margin-left: 2em;
+  margin-right: 2.5em;
+}
+
+.check_circle{
+  margin-left: 2em;
+}
+
+.footer-section{
+  background-color: #0F0D1D;
+  color: #707070;
+  padding: 3em 5em;
+  padding-top: 5em;
+}
+
+.footer-section2{
+  display: flex;
+  padding-bottom: 5em;
+}
+
+.footer-section3{
+  display: flex;
+  justify-content: space-between;
+}
+
+p.welcome_note{
+  padding-right: 1em;
+}
+
+.logo_{
+  margin-right: 1em;
+}
+
+.phone, .location, .email {
+  display: flex;
+}
+
+.explore_footer{
+  display: flex;
+  gap: 2em;
+  padding-top: 3em;
+}
+
+.explore_list{
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.explore_list a{
+  text-decoration: none;
+  color: #707070;
+}
+
+.logo_, .explore_, .newsletter{
+  flex: 1;
+}
+
+.form_{
+  margin-top: 2em;
+  border: 2em solid black;
+  background-color: black;
+}
+
+.form_ button{
+  background-color: #007bff;
+  color: white;
+}
 
 
+p.creative_logo, .explore_ h6, .newsletter h6{
+  color: white;
+  font-weight: bolder;
+}
 
+.footer-section2{
+  background-color: #0F0D1D;
 
-
-
-
-
+}
 
 
 
