--- a/Test/src/App.css
+++ b/Test/src/App.css
@@ -21,12 +21,14 @@
   color: white;
   margin-right: 1em;
   text-decoration: none;
+  font-size: smaller;
+  font-weight: bolder;
 }
 
-.nav{
+/* .nav{
   border-bottom: .2em solid white;
   padding: 0 0;
-}
+} */
 
 /* .logo{
   border: .1em solid white;
@@ -34,18 +36,31 @@
 } */
 
 
-.vertical-rule::after {
+/* .vertical-rule::after {
   content: '';
   border-left: 1px solid black; 
-  height: 100px; 
+  height: 100px;  */
   /* display: inline-block; */
-  margin-left: 10px; 
+  /* margin-left: 10px; 
+} */
+
+.logo a {
+  color: white;
 }
 
 
-/* .container{
-  height: 100%;
-} */
+
+
+.search_form{
+  margin-left: 4em;
+  /* border-left: 0.1em solid white; */
+  /* padding-left: 1em; */
+
+}
+
+.container{
+  border-left: 0.1em solid white;
+}
 
 .help{
   display: flexbox;
@@ -53,6 +68,20 @@
 
 .small_text{
   flex-direction: row;
+  margin-bottom: 0;
+  color: white;
+  
+}
+
+
+
+.socials_icons{
+  padding-left: 5em;
+}
+
+.help{
+  border-left: 0.1em solid white;
+  padding-left: 1em;
 }
 
 
@@ -67,7 +96,6 @@
   margin-left: 11%;
   padding-top: 5%;
   padding-bottom: 10%;
-  border: 0.2rem solid white;
   width: 20%;
 }
 
@@ -92,12 +120,16 @@
 }
 
 .discover_container{
-  background-color: blue;
-  width: 60%;
+  background-color: #3C72FC;
+  width: 50%;
+  padding: 1em;
+  padding-left: 1.5;
+}
 
-  /* width: 40%; 
-  margin-right: 50%; */
-  /* padding: 2em; */
+a.discover{
+  padding-bottom: 0;
+  padding-left: 0;
+  font-weight: bold;
 }
 
 
@@ -212,10 +244,27 @@ p.wealth_mgt{
 
 .market_container {
   display: flex;
+  padding-left: 7em;
+  padding-top: 5em;
 }
 
 .market_col {
   flex: 1;
+}
+
+p.market{
+  font-size: xx-large;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bolder;
+  width: 60%;
+}
+
+p.lorem, p.years{
+  width: 60%;
+}
+
+p.years{
+  color: #007bff;
 }
 
 
@@ -285,17 +334,19 @@ p.wealth_mgt{
 
 .professional{
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  margin-left: 8em;
+  margin-right: 8em;
 }
 
 .one{
   background-color: #87b3ec;
-  width: 15%;
-  height: 60%;
+  width: 17%;
+  height: 50%;
   
 }
 
 .one > h6{
-  margin-left: 2em;
+  margin-left: 1em;
   margin-top: 1em;
 }
 
@@ -307,6 +358,18 @@ p.wealth_mgt{
 .professional_container {
   flex: 1;
   margin: 3em;
+}
+
+.new_case{
+  margin-left: 45%;
+  margin-top: 3em;
+  font-weight: bolder;
+  font-size:xx-large;
+}
+
+.clients{
+  margin-left: 47%;
+  font-size: small;
 }
 
 .business_case{
@@ -325,6 +388,7 @@ p.business_growth{
   width: 10%;
   font-size: x-large;
   color: white;
+  margin-left: 0;
 }
 
 .business_case > svg{
@@ -335,13 +399,17 @@ p.business_growth{
   padding-top: 10%;
   padding-bottom: 2%;
   padding-left: 3%;
+  flex: 1;
+  margin-left:5% ;
+  margin-right: 5%;
 }
 
 .business_container{
   display: flex;
   gap: 2em;
-  margin-left: 3em;
+  /* margin-left: 30%; */
   margin-bottom: 3em;
+  margin-top: 2em;
 }
 
 .mission{
